--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -237,7 +237,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -251,7 +251,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -300,7 +300,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -346,7 +346,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -411,7 +411,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -479,7 +479,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -493,7 +493,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -519,7 +519,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -616,7 +616,7 @@
                       <p>3) Выбирать удобный ему способ доставки и способ оплаты Товара.</p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -645,7 +645,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -659,7 +659,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                   <a href="#" class="offer__item">
@@ -676,7 +676,7 @@
                       </p>
                     </div>
                     <div class="offer__img">
-                      <img src="/img/1.jpg" alt="" />
+                      <img src="img/1.jpg" alt="" />
                     </div>
                   </a>
                 </div>
